<resources>
    <string name="app_name">Storj</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="error_email_empty">Email cannot be null</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_empty_password">Password cannot be null</string>
    <string name="later">Later</string>
    <string name="activate">Activate</string>
    <string name="error_empty_token">Token cannot be empty</string>
    <string name="take_picture">Take Picture</string>
    <string name="delete">Delete</string>
    <string name="upload">Upload</string>
    <string name="select_all">Select All</string>
    <string name="empty_image_grid_hint">Tap the camera button below to take photos</string>
    <string name="no_photos">No photos</string>
    <string name="signup">Sign Up</string>
    <string name="create_new_bucket">Create New Bucket</string>
    <string name="capture_image">Capture Image</string>
    <string name="bucket_name">Bucket Name</string>
    <string name="capacity">Capacity(in GB)</string>
    <string name="transfer">Transfer(in GB)</string>
    <string name="about">About</string>
    <string name="storj_desc">Distributed, encrypted, and blazing fast object storage, where only you have access to your data.</string>
    <string name="splash_text">Welcome to Storj!</string>
    <string name="show_tutorial">Show Tutorial</string>
    <string name="activate_account_message">An email has been sent to your email id. Please check your email for instructions on how to activate your account. This app will not function until you activate your account. Once you have activated your account you can start using this app.</string>
    <string name="delete_bucket">Delete Bucket</string>
    <string name="update_bucket">Update Bucket</string>
</resources>
