<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_action_select_all"
        android:title="@string/select_all"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_select_all"
        android:orderInCategory="100" />

    <item
        android:id="@+id/menu_action_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/menu_action_upload"
        android:title="@string/upload"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_file_upload"
        android:orderInCategory="200" />

</menu>